fix delete hover on mobile

--- a/src/assets/style/cmps/_general-table.scss
+++ b/src/assets/style/cmps/_general-table.scss
@@ -34,6 +34,10 @@
                 cursor: pointer;
                 opacity: 0;
                 transition: .2s;
+
+                @include for-mobile-layout {
+                    opacity: 1;
+                }
             }
 
 
